# PresetUI

./: README.md  pyproject.toml  requirement.txt  rich_preset.py  textual_preset.css  textual_preset.py
demo/: demo.py
src/presetui/: __init__.py  cli.py
src/rich_preset/: core.py
src/textual_preset/: __init__.py  core.py
